# rust-media-demo

./: .gitignore  Cargo.toml  README.md  build.rs  diesel.toml  media.db
migrations/2025-06-07-092145_create_media_file/: down.sql  up.sql
src/: models.rs  schema.rs
src/proto/: media.proto  media.rs
