[package]
name = "media_project"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.9"
prost = "0.11"
diesel = { version = "2.0", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.24", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
tokio-util = "0.7"
tokio-tungstenite = "0.18"
async-stream = "0.3" # Added for client streaming

[build-dependencies]
tonic-build = "0.9"